--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -547,6 +547,7 @@
 // ---
 @page-header-padding-horizontal: 24px;
 @page-header-padding-vertical: 16px;
+@page-header-padding-top: 12px;
 
 // Breadcrumb
 // ---
