--- a/components/page-header/style/index.less
+++ b/components/page-header/style/index.less
@@ -7,16 +7,18 @@
   .reset-component;
 
   position: relative;
-  padding: @page-header-padding-vertical @page-header-padding-horizontal;
+  padding: @page-header-padding-top @page-header-padding-horizontal @page-header-padding-vertical
+    @page-header-padding-horizontal;
 
   &-back {
-    display: inline-block;
     line-height: 1;
-    font-size: 24px;
+    font-size: 20px;
+    margin: 6px;
     margin-right: 16px;
+    float: left;
     &-button {
       .operation-unit();
-      color: @text-color;
+      color: #000;
       cursor: pointer;
     }
   }
@@ -33,29 +35,35 @@
 
   &-heading {
     width: 100%;
-    display: inline-block;
+    overflow: hidden;
     &-title {
-      display: inline-block;
+      display: block;
+      float: left;
       padding-right: 12px;
       margin-bottom: 0;
       color: @heading-color;
       font-weight: 600;
       font-size: @heading-3-size;
-      line-height: 1.4;
+      line-height: 32px;
+    }
+
+    .@{ant-prefix}-avatar {
+      float: left;
+      margin-right: 12px;
     }
 
     &-sub-title {
-      display: inline-block;
-      padding-right: 12px;
+      float: left;
+      margin: 5px 0;
+      margin-right: 12px;
       color: @text-color-secondary;
       font-size: 14px;
-      line-height: 1;
-      vertical-align: text-top;
+      line-height: 22px;
     }
 
     &-tags {
-      display: inline-block;
-      vertical-align: text-bottom;
+      float: left;
+      margin: 4px 0;
     }
 
     &-extra {
